# python-project-50-student

./: .coverage  .pyproject.toml.swp  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  gendiff.py  pars.py
gendiff/scripts/: main.py
tests/: test_gendiff.py
